# IA_motor_ps1

./: README.md
PSX_Game_Engine/: LICENSE  README.md
PSX_Game_Engine/Editor/src/: CMakeLists.txt  Editor.cpp  Editor.h  ModelExporter.cpp  ModelExporter.h  main.cpp
PSX_Game_Engine/Engine/src/: Makefile  engine.c  engine.h  main.c  model.c  model.h  test.c
